content/manual/versions/v3.6/source/includes/fact-platform-support-enterprise-red-hat.rst
.. topic:: EOL Notice

   - MongoDB 3.6.17 Enterprise Edition removes support for RHEL / CentOS
     / Oracle 7 on :ref:`s390x<prod-notes-supported-platforms-s390x>`

   - MongoDB 3.6.14 Enterprise Edition removes support for RHEL / CentOS
     / Oracle 6 on :ref:`s390x<prod-notes-supported-platforms-s390x>`

MongoDB {+version+} Enterprise Edition supports the following
:red:`64-bit` versions of Red Hat Enterprise Linux (RHEL), CentOS Linux,
and Oracle Linux [#oracle-linux]_ on 
:ref:`x86_64<prod-notes-supported-platforms-x86_64>` architecture:

- :abbr:`RHEL (Red Hat Enterprise Linux)` / CentOS / Oracle 8
  (Starting in MongoDB Enterprise 3.6.17)

- :abbr:`RHEL (Red Hat Enterprise Linux)` / CentOS / Oracle 7

- :abbr:`RHEL (Red Hat Enterprise Linux)` / CentOS / Oracle 6

MongoDB only supports the 64-bit versions of these platforms.

MongoDB {+version+} Enterprise Edition on
:abbr:`RHEL (Red Hat Enterprise Linux)` / CentOS / Oracle also supports
the :ref:`PPC64LE<prod-notes-supported-platforms-PPC64LE>` architecture
on select platforms.

See :ref:`prod-notes-supported-platforms` for more information.

.. [#oracle-linux]

   MongoDB only supports Oracle Linux running the Red Hat Compatible
   Kernel (RHCK). MongoDB does **not** support the Unbreakable
   Enterprise Kernel (UEK).

.. include:: /includes/admonition-wsl.rst
