content/manual/versions/v4.2/source/includes/fact-platform-support-enterprise-red-hat.rst
MongoDB {+version+} Enterprise Edition supports the following
:red:`64-bit` versions of Red Hat Enterprise Linux (RHEL),
Oracle Linux [#oracle-linux]_, Rocky Linux, and AlmaLinux [#rocky-alma]_ 
on :ref:`x86_64 <prod-notes-supported-platforms-x86_64>` architecture:

- :abbr:`RHEL (Red Hat Enterprise Linux)` / CentOS / Oracle / Rocky / Alma 8
  (Starting in MongoDB Enterprise 4.2.1)

- :abbr:`RHEL (Red Hat Enterprise Linux)` / CentOS / Oracle 7

- :abbr:`RHEL (Red Hat Enterprise Linux)` / CentOS / Oracle 6

MongoDB only supports the 64-bit versions of these platforms.

MongoDB {+version+} Enterprise Edition on
:abbr:`RHEL (Red Hat Enterprise Linux)` / CentOS / Oracle / Rocky / Alma 
also supports the :ref:`PPC64LE<prod-notes-supported-platforms-PPC64LE>` and
:ref:`s390x<prod-notes-supported-platforms-s390x>` architectures on
select platforms.

See :ref:`prod-notes-supported-platforms` for more information.

.. [#oracle-linux]

   MongoDB only supports Oracle Linux running the Red Hat Compatible
   Kernel (RHCK). MongoDB does **not** support the Unbreakable
   Enterprise Kernel (UEK).

.. [#rocky-alma]
   MongoDB on-premises products released for RHEL version 8.0+ are 
   compatible with and supported on Rocky Linux version 8.0+ and 
   AlmaLinux version 8.0+, contingent upon those distributions meeting 
   their obligation to deliver full RHEL compatibility.

